# input-device-manager

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  main.c
